          Added Remote Control functionality.
          When editing pages, hitting the Android Back button now prompts to discard changes.
          Authentication is now handled at the application level rather than per-box.
          You can now export backup configs and log files.
          Added commandline arguments for:
            --keyboard - enables an embedded onscreen keyboard
          In Demo mode we don't add any HTTP headers, as this can stop the connection.

          New Boxes:
            Remote Control
            Compass Rose
            Compass Gauge
            Starlink
            Timers
            Stopwatch
            Sailor Hat

          Box updates:
            Degree values are now marked with a degrees symbol rather than 'deg'.
            Temperature unit now show degrees symbol.
            Moon Box now renders text with a boarder to make the text more visible.
            PositionBox: the lat/long format is now a single string to allow for
              more flexibility.
            AnchorAlarmBox: added wind angle.
            NextPointBearingBox: removed smoothing.
            NextPointTimeToGoBox: the heading will now scroll if it is long and
              the value is subject to smoothing.
            Sunlight/Moon Boxes now handle null values per-path.
            Electrical Boxes now flag there data as Infrequent.
  * 0.7.0 Application time is now taken from the SignalK server. This ensures
            timestamps are handled correctly even on devices not correctly
            time synchronised.
          Added Notifications Log display.
          If we fails to read the config we back it up before reverting to
            the default.
          Added --enable-set-time command line option to allow setting
            the OS time from 'navigation.datetime'.
          Added --config-file command line option to allow multiple instances
            to be run with different configs.